deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: default 
  labels:
    app: test
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test      
    spec:
      containers:
      - name: test
        image: siddhanta28/node:latest
        ports:
        - containerPort: 80
