service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: default

spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
