ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  rules:
  - host: mynodeapp.com
    http:
      paths:
      - path: /node
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 80
